# Cryptopals

./: .gitignore  .gitmodules  README.md  cryptopals_set_1_problem_4.cpp  local_dev_guide.md  local_static_analysis.sh
.github/workflows/: clang-format-check.yml  cpp-static-analysis-check.yml  cpp-unit-tests-with-test-coverage.yml  cpp-unit-tests.yml
1-Set_1/: cryptopals_set_1_problem_6.cpp  cryptopals_set_1_problem_6.py
Cryptopals/: cryptopals_set_1_problem_1.cpp
Cryptopals_resolutions/: cryptopals_set_1_problem_1.cpp  cryptopals_set_1_problem_3.cpp  cryptopals_set_1_problem_6.cpp  cryptopals_set_1_problem_7.cpp  cryptopals_set_2_problem_9.cpp
Cryptopals_resolutions/1-Set_1/: cryptopals_set_1_problem_2.cpp  cryptopals_set_1_problem_3.cpp  cryptopals_set_1_problem_7.cpp  cryptopals_set_1_problem_8.cpp
Cryptopals_resolutions/1-Set_1/cryptopals_set_1_problem_1/: cryptopals_set_1_problem_1.cpp  (+1 more)
Cryptopals_resolutions/2-Set_2/: cryptopals_set_2_problem_10.cpp  cryptopals_set_2_problem_11.cpp  cryptopals_set_2_problem_12.cpp  cryptopals_set_2_problem_13.cpp  cryptopals_set_2_problem_9.cpp
Cryptopals_resolutions/4-Set_4/: hmac_calculation.py
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_28/: CMakeLists.txt  backup_sha1.cpp  cryptopals_set_4_problem_28.puml  cryptopals_set_4_problem_28.sh  encryption.cpp
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_28/include/: Attacker.hpp  PrintFormat.hpp  SHA.hpp  SHA1.hpp  Server.hpp
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_28/input/: transaction_Alice_to_Bob.json
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_28/input/Server_database/: symmetric_keys.json  symmetric_keys_encrypted_aes.json.enc  symmetric_keys_example.json
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_28/output/: forged_transaction_Alice_to_Mallory.json
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_28/src/: Attacker.cpp  SHA.cpp  SHA1.cpp  Server.cpp  cryptopals_set_4_problem_28.cpp
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_28/tests/: CMakeLists.txt  test_attacker.cpp  test_server.cpp  test_sha1.cpp
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_28/tests/input/: transaction_Alice_to_Bob.json
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_28/tests/input/Server_database/: symmetric_keys_encrypted_aes.json.enc
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_28/uml_diagrams/: class_diagram.puml  sequence_diagram.puml
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_29/tests/: CMakeLists.txt  test_attacker.cpp  test_server.cpp  test_sha1.cpp
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_30/: CMakeLists.txt  key_creation.py  mac_calculation.py  solving_strategy.md
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_30/include/: Attacker.hpp  MD4.hpp  MD4InternalState.hpp  MessageDigest.hpp  Server.hpp
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_30/input/: intercepted_url.txt
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_30/src/: Attacker.cpp  MD4.cpp  MessageDigest.cpp  Server.cpp  cryptopals_4_problem_30.cpp
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_30/tests/: CMakeLists.txt  test_attacker.cpp  test_md4.cpp  test_server.cpp
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_30/uml_diagrams/: class_diagram.puml  sequence_diagram.puml  sequence_diagram_md4.puml
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_31/: CMakeLists.txt  codeFormat.sh  key_creation.py  solving_strategy.md
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_31/include/: Attacker.hpp  HMAC.hpp  HMAC_SHA1.hpp  SHA.hpp  SHA1.hpp  Server.hpp
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_31/src/: Attacker.cpp  HMAC_SHA1.cpp  MessageExtractionFacility.cpp  Server.cpp  cryptopals_4_problem_31.cpp  run_attacker.cpp  run_server.cpp
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_31/tests/: CMakeLists.txt  test_hmac_sha1.cpp  test_server.cpp  test_sha1.cpp
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_31_32/: CMakeLists.txt  README.md  codeFormat.sh  solving_strategy.md
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_31_32/include/: Attacker.hpp  HMAC.hpp  HMAC_SHA1.hpp  MessageExtractionFacility.hpp  MessageFormat.hpp  SHA.hpp  SHA1.hpp  Server.hpp
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_31_32/src/: Attacker.cpp  HMAC.cpp  HMAC_SHA1.cpp  MessageExtractionFacility.cpp  SHA1.cpp  Server.cpp  run_attacker.cpp  run_server.cpp
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_31_32/tests/: CMakeLists.txt  test_hmac_sha1.cpp  test_server.cpp  test_sha1.cpp
Cryptopals_resolutions/4-Set_4/cryptopals_set_4_problem_31_32/uml_diagrams/: class_diagram.puml  sequence_diagram.puml
Cryptopals_resolutions/5-Set_5/cryptopals_set_5_problem_33/: CMakeLists.txt  codeFormat.sh  solving_strategy.md
Cryptopals_resolutions/5-Set_5/cryptopals_set_5_problem_33/include/: Client.hpp  DH_parameters_loader.hpp  DhParametersLoader.hpp  DiffieHellman.hpp  Diffie_Hellman.hpp  EncryptionUtility.hpp  MessageExtractionFacility.hpp  Server.hpp  SessionData.hpp
Cryptopals_resolutions/5-Set_5/cryptopals_set_5_problem_33/input/: dh_parameters.json
Cryptopals_resolutions/5-Set_5/cryptopals_set_5_problem_33/src/: Client.cpp  DH_parameters_loader.cpp  DhParametersLoader.cpp  DiffieHellman.cpp  Diffie_Hellman.cpp  EncryptionUtility.cpp  MessageExtractionFacility.cpp  Server.cpp  runClient.cpp  runClient1.cpp  runClient2.cpp  runClient3.cpp  runServer.cpp  run_client.cpp  run_server.cpp
Cryptopals_resolutions/5-Set_5/cryptopals_set_5_problem_33/tests/: CMakeLists.txt  test_DhParametersLoader.cpp  test_dhParametersLoader.cpp  test_diffieHellman.cpp  test_diffieHellmanProtocol.cpp
Cryptopals_resolutions/5-Set_5/cryptopals_set_5_problem_33/uml_diagrams/: class_diagram.puml  sequence_diagram.puml
Cryptopals_resolutions/5-Set_5/cryptopals_set_5_problem_34/tests/: CMakeLists.txt  test_diffieHellmanProtocol.cpp  test_diffieHellmanProtocolMITMattack.cpp
(+269 files in other folders)
